@@ -9,6 +9,7 @@ check:
 	test ! -f $(DI)/direct_url.json
 	grep -L ^foo-0.1.dist-info/direct_url.json, $(DI)/RECORD | grep -q RECORD
 	grep -q 'Depends:.*python3-toml' debian/python3-foo/DEBIAN/control
+	grep -L 'Depends:.*tox' debian/python3-foo/DEBIAN/control | grep -q control
 	find .pybuild -name test-executed | grep -q test-executed
 
 clean:
